# chimerical-characters

./: .gitignore  README.md  pyproject.toml
src/chimerical_characters/: utils.py
src/chimerical_characters/cli/: admin.py  characters.py  main.py
src/chimerical_characters/data/: appdata.py  dynamics.py  statics.py
