[project]
authors = [{name = "Ethan Shanahan", email = "ethan.shanahan@gmail.com"}]
dependencies = []
description = "A character sheet application for D&D."
name = "chimerical-characters"
requires-python = ">= 3.11"
version = "0.1.0"

[project.scripts]
chimerical = "chimerical_characters.cli.main:app"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["win-64"]

[tool.pixi.pypi-dependencies]
chimerical_characters = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
python = "3.12.*"

[tool.pixi.feature.cli.dependencies]
typer = "*"

[tool.pixi.feature.test.dependencies]
pytest = "*"

[tool.pixi.environments]
default = { solve-group = "default" }
test = { features = ["test"], solve-group = "default" }
cli = { features = ["cli"], solve-group = "default" }
all = { features = ["test", "cli"], solve-group = "default" }
